# AutonomousNavigationRobot

./: README.md
robot_description/: CMakeLists.txt  package.xml  rover_keyboard_control.cpp
robot_description/archives/: conexion_mr.ipt.stl  conexion_mr.stl  l1.ipt.stl  l1.stl  l2_l3.ipt.stl  l2_l3_modificado-2.stl  part_1.stl  rueda10cm.ipt.stl  rueda10cm.stl
robot_description/config/: rrbot_control.yaml
robot_description/controller/: controller.py
robot_description/launch/: MYROBOT_control.launch  display.launch  displayRobot.launch  gazebo_mdrs.launch  robotGazebo.launch  rrbot_control.launch  rvizRobot.launch  spawnUrdf.launch  start_rviz.launch.py
robot_description/robot/: conexion_mr.ipt.part  conexion_mr.part  conexion_mr.stl  config.json  l1.ipt.part  l1.part  l1.stl  l2_l3.ipt.part  l2_l3_modificado-2.part  l2_l3_modificado-2.stl  part_1.part  rueda10cm.ipt.part  rueda10cm.part  rueda10cm.stl
robot_description/scripts/: publish_sim_time.py
robot_description/urdf/: robot copy.urdf  robot.gazebo  robot.trans  robot.urdf  robot.xacro  robot_1.urdf  robot_rotated.urdf
robot_description/worlds/: mars_terrain.world  samll_house.world
